--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "react-select": "^5.10.1",
     "sweetalert2": "^11.22.0",
     "tailwindcss": "^4.1.7"
   },
