--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://cinema-manager-be.vercel.app/api
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y29udGVudC1tYWdwaWUtMjEuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_LFy0ZPS4wnKdk6W9iP21iypYyYWVy7Qu3d4WY2NnCx
 CLERK_WEBHOOK_SIGNING_SECRET=whsec_123
